[SmartLock] Begin initial scan UI before attempting connection.

When scanning begins, a yellow icon with the tooltip "cannot connect..."
briefly pops up and is then replaced again by the spinner. This CL
prevents that visual jank by making sure |is_performing_initial_scan_|
is set to true before fetching lock screen state.

Bug: 890047, 921766
Change-Id: Ib41d4744f1eddcb510497b303a8a220716123f09
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1716156
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#680547}

Former-commit-id: 69176c66eee3505ee0da4768405c76111359ecf4